EP-44 PR review changes